feat(backend): refactor inventory handler to use OrderService via adapters
feat(backend): add adminId to AllInventory, Order, and CreateOrderRequest structs

feat(backend): add admin_id column and FK relation to users in orders table

feat(backend): set default Active status for new users

fix(backend): improve error handling in inventory repository GetById (handle sql no rows)

refactor(backend): clean up GetInventory usecase and /by-id route error responses

docs(readme): update project readme

=========================================================================================================

feat(frontend): add custom error message for CreateOrderRequest model

feat(frontend): add users table with working create user form

refactor(frontend): update InputField and GenericDropdownMenu to use value/valueChanged/valueExpression instead of @bind-value

feat(frontend): update UserService with create user method

wip(frontend): add missing validation for quantity field in create order form

docs(readme): update project readme
