# apps/logistics-backend/docs/swagger.yaml
@@ -328,6 +328,8 @@ definitions:
     - Push
   order.CreateOrderRequest:
     properties:
+      admin_id:
+        type: string
       customer_id:
         type: string
       delivery_location:
@@ -339,6 +341,7 @@ definitions:
       quantity:
         type: integer
     required:
+    - admin_id
     - customer_id
     - delivery_location
     - inventory_id
@@ -365,6 +368,8 @@ definitions:
     type: object
   order.Inventory:
     properties:
+      admin_id:
+        type: string
       id:
         type: string
       name:
@@ -372,6 +377,8 @@ definitions:
     type: object
   order.Order:
     properties:
+      admin_id:
+        type: string
       created_at:
         type: string
       customer_id:
@@ -1172,7 +1179,7 @@ paths:
       summary: Get inventories by category
       tags:
       - inventories
-  /inventories/by-id:
+  /inventories/by-id/{id}:
     get:
       description: Get a specific inventory item by UUID
       parameters:
